force-app/main/default/objects/Incident_Contact_Role__c/Incident_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Incident Contact Role</label>
    <nameField>
        <displayFormat>ICR-{00000000}</displayFormat>
        <label>Incident Contact Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>