force-app/main/default/objects/Incident_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Impacted</fullName>
            </value>
            <value>
                <fullName>Witnessed</fullName>
            </value>
            <value>
                <fullName>Instigated</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Bank Counsel</fullName>
            </value>
            <value>
                <fullName>Customer Counsel</fullName>
            </value>
            <value>
                <fullName>Non-Customer Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>