force-app/main/default/objects/Incident_Contact_Role__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Customer Contact</fullName>
            </value>
            <value>
                <fullName>Non-Customer Contact</fullName>
            </value>
            <value>
                <fullName>Third-Party Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>